# tfxkit

./: .readthedocs.yaml  LICENSE  ModelFactory.py  MuModelFactory.py  README.md  README.rst  config.yml  defaults.py  features.py  pyproject.toml  run_i3_command.sh
configs/: config_CscdBDT_allfeat_w2_regul.yml  config_newmuvars.yml  defaults.yml
docs/: concepts.rst  conf.py  conf.py.test  config.md  index.rst  modules.rst  quickstart.md  usage.md  usage.rst
notebooks/: EvalModel_CscdBDT.ipynb  custom_loss_L3.ipynb  get_x_mins.py
processing/: CombineGenDet.py  I3ModelWrapper.py  MCPrimaryConverter.py  NNRejectionSampler.py  PrimaryParticleMatcher.py  SimHDFWriter.py  processor.py  submit.condor.b2luigi.py  submit_L3CscdSBU.condor.b2luigi.py  submit_filtered.condor.b2luigi.py  submit_utils.py
processing/L3/: makejobs.py
processing/model_eval/: i3module.py
src/tfxkit/: cli.py
src/tfxkit/common/: base_utils.py  hyper_tune.py  plotting_utils.py  preprocessing.py  tf_utils.py
src/tfxkit/configs/: config.yaml  config.yml  quickstart.yaml
src/tfxkit/configs/data/: default_data.yaml
src/tfxkit/configs/evaluation/: default_evaluation.yaml
src/tfxkit/configs/model/: default_model.yaml
src/tfxkit/configs/optimizer/: default_optimizer.yaml
src/tfxkit/configs/training/: default_training.yaml
src/tfxkit/configs/tuner/: default_tuner.yaml
src/tfxkit/core/: config_loader.py  data_manager.py  evaluator.py  logger.py  model_builder.py  model_factory.py  plotter.py  trainer.py  tuner.py
src/tfxkit/examples/: example.yaml  example_utils.py  utils.py
utils/: __init__.py  base_utils.py  chill_argparser.py  cscd_utils.py  elbert_yield.py  generate_html.py  hyper_tune.py  muon_bias_utils.py  muon_embedding.py  plotting_utils.py  speedup_utils.py  tf_utils.py  weight_utils.py
