[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tfxkit"
version = "0.1.0"
description = "Toolkit for TensorFlow model workflows with config-driven training"
authors = [
  { name="Navid K. Rad", email="navidkrad@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
  "tensorflow",
  "omegaconf",
  "hydra-core",
  "pandas",
  "numpy",
  "matplotlib",
  "keras-tuner",
  "tables"
]

[project.optional-dependencies]
dev = ["pytest", "jupyter"]
docs = ["sphinx", "myst-parser", "furo"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"tfxkit.configs" = ["*.yaml"]
