[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tfxkit"
version = "0.0.1"
description = "Toolkit for TensorFlow model workflows with config-driven training"
authors = [
  { name="Navid K. Rad", email="navidkrad@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
  "tensorflow",
  "omegaconf",
  "hydra-core",
  "pandas",
  "numpy",
  "matplotlib",
  "keras-tuner",
  "tables",
  "plothist",
]

[project.optional-dependencies]
dev = ["pytest", "jupyter"]
docs = [
  "sphinx",
  "sphinx-rtd-theme",
  "myst-parser",
  "furo"
]

[project.scripts]
tfxkit = "tfxkit.cli:main"
tfxkit-train = "tfxkit.cli:train_entry"
tfxkit-tune = "tfxkit.cli:tune_entry"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"tfxkit.configs" = ["*.yaml"]
"tfxkit.examples.configs" = ["*.yaml"]
